start a simple autocomplete dropdown combo